<resources>
    <string name="app_name">DroneIt</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="UDP_connect">UDP Connect</string>
    <string name="USB_connect">USB Connect</string>

    <string-array name="drone_connection_types">
        <item>USB</item>
        <item>UDP</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="parse_app_id">N7jrJ7GYUuZdx6SkEnqs6tFpjUtiooFYVxYSeKLn</string>
    <string name="parse_client_key">fuaTBbDnS9x5Ws0ABWP3RSIwhlnTsSb59AnBMZ9O</string>

    <string name="level_title">Choose Level</string>
    <string name="level">Level</string>
    <string name="free_flight">Free Flight</string>
    <string name="coming_soon">Coming Soon</string>

    <string name="start_line">Drone It!</string>
    <string name="play">Play</string>
    <string name="high_score">High Score</string>
    <string name="finish_line">Finish</string>
    <string name="game_over">Game Over</string>
    <string name="waypoint_received">Waypoint Received</string>
    <string name="game_press_back_alert">Press back again to close the game</string>


    <!-- Strings related to login -->
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>

    <!-- Settings -->
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pref_connection_type">Connection Type</string>
    <string name="pref_connection_type_summary">Set the connection type</string>

    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>

    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Settings</string>

    <!-- Blur Dialog -->
    <string name="dialog_won_title">You Won!</string>
    <string name="dialog_gameOver_title">Game Over</string>
    <string name="dialog_time_title">Your Time is:</string>
    <string name="dialog_try_again">Try Again</string>
    <string name="dialog_finish">Finish</string>
    <string name="high_scores">HIGH SCORES</string>
</resources>
