<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layoutDirection="ltr">
    
    <PreferenceCategory android:title="@string/pref_update_setting" >
        <CheckBoxPreference
            android:key="prefSendReport"
            android:defaultValue="false"
            android:title="@string/pref_send_report"
            android:summary="@string/pref_send_report_summary">
        </CheckBoxPreference>

        <ListPreference
            android:key="prefConnectionType"
            android:defaultValue="1"
            android:entries="@array/connectionType"
            android:entryValues="@array/connectionTypeValues"
            android:title="@string/pref_connection_type"
            android:summary="@string/pref_connection_type_summary"/>
    </PreferenceCategory>

</PreferenceScreen>