<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUpActivity"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    android:background="@drawable/sky_background"
    android:gravity="center">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_username"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:background="#64000000"
        android:layout_margin="5dp"
        android:textColor="#d2ffffff"
        android:textColorHint="#d2ffffff"
        android:padding="7dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:background="#64000000"
        android:layout_margin="5dp"
        android:textColor="#d2ffffff"
        android:textColorHint="#d2ffffff"
        android:padding="7dp" />

    <EditText
        android:id="@+id/passwordAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password_again"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:background="#64000000"
        android:layout_margin="5dp"
        android:textColor="#d2ffffff"
        android:textColorHint="#d2ffffff"
        android:padding="7dp" />

    <Button
        android:id="@+id/action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/sign_up" />
</LinearLayout>