<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.o3dr.droneit.DialogFragment"
    android:layoutDirection="ltr">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dialog_won_title"
            android:id="@+id/dialogTitle"
            android:gravity="center"
            android:padding="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textColor="@color/colorTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dialog_time_title"
            android:id="@+id/dialogTime"
            android:gravity="center"
            android:padding="10dp"
            android:layout_below="@+id/dialogTitle"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_try_again"
            android:id="@+id/tryAgainBT"
            android:layout_below="@+id/dialogTime"
            android:layout_centerHorizontal="true"
            android:onClick="onTryAgainClicked" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_finish"
            android:id="@+id/finishBT"
            android:layout_below="@+id/tryAgainBT"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</FrameLayout>
